--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 snowflake-connector-python
 snowflake-snowpark-python
 streamlit==1.31.1
+# New Section to display fruityvice nutrition information
 import requests
 fruityvice_response = requests.get("https://fruityvice.com/api/fruit/watermelon")
 st.text(fruityvice_response.json())
