--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # requirements.txt
 snowflake-connector-python
 snowflake-snowpark-python
-streamlit==1.31.1
+streamlit==1.31.1;
 # New Section to display fruityvice nutrition information
 import requests
 fruityvice_response = requests.get("https://fruityvice.com/api/fruit/watermelon")
